app/assets/stylesheets/cities.scss
.city-title {
	font-family: 'Indie Flower', cursive;
	font-size: 70px;
	background: rgba(0, 0, 0, 0.3);
	display: inline;
}



.featured-city {
	font-family: 'Cabin', sans-serif;
	font-size: 30px;
	color: white;
	
}

.link-text {
	text-decoration: underline overline;
	text-decoration-color: #990303;
	font-family: 'Cabin', sans-serif;
	font-size: 20px;
	color: white;
	background: rgba(0,0,0,0)
}

.link-text:hover {
	font-family: 'Cabin', sans-serif;
	font-size: 25px;
	color: white;
	background:#990303
}

.globe {
	color: #990303
}

.globe:hover {
	color: rgb(0, 125, 255);
	background: #32AF32;
	border-radius: 100%;
}

.city-container {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
}
.city-show-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
}
.post-div {
   display: flex;
   flex-direction: column;
}

.post-div-border {
	display: flex;
	flex-direction: column;
	border: 3px solid white;
	border-radius: 10px;
 }

.city {
	display: inline-block;
	margin: 0 20px 0 20px;
   
}

.city-image-div {
   height: 250px;

}
.city-user-post {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: white;
  

}

.city-user-row-post {
	display: flex;
	color: white;

}

